--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://halyna-ala.io/hm-3/",
+  "homepage": "https://halyna-ala.io/goit-react-hw-04-images",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -12,11 +12,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-loader-spinner": "^5.1.7-beta.1",
+    "react-loader-spinner": "^5.1.5",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.7",
-    "react-scroll": "^1.8.7",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5",
+    "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
